--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,11 @@
   "compilerOptions": {
     "strict": true,
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"]
     }
+  },
+  "expo": {
+    "typedRoutes": false
   },
   "include": [
     "**/*.ts",
